--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -28,21 +28,27 @@
         <div class="col-md-6">
             <form th:action="@{/register}" method="post" class="card p-4" style="background-color: #87cefa;">
                 <div class="form-group">
-                    <label for="username">帳號：</label>
+                    <label for="userId">使用者 ID: </label>
+                    <input type="text" class="form-control" name="userId" id="userId" placeholder="userId">
+                </div>
+                <div class="form-group">
+                    <label for="username">使用者名稱：</label>
                     <input type="text" class="form-control" name="username" id="username" placeholder="username">
                 </div>
                 <div class="form-group">
-                    <label for="realname">真實姓名：</label>
-                    <input type="text" class="form-control" name="realname" id="realname" placeholder="realname">
+                    <label for="email">信箱：</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="email">
                 </div>
                 <div class="form-group">
                     <label for="password">密碼：</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="password">
                 </div>
                 <div class="form-group">
-                    <label for="email">信箱：</label>
-                    <input type="email" class="form-control" name="email" id="email" placeholder="email">
+                    <label for="biography">自我介紹：</label>
+                    <input type="text" class="form-control" name="biography" id="biography" placeholder="biography">
                 </div>
+
+
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">註冊</button>
                     <a href="/login" class="btn btn-secondary">登入驗證</a>
